--- a/Unification2/3_Life_Expectancy_EDA.ipynb
+++ b/Unification2/3_Life_Expectancy_EDA.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "86645f3e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "e62d54ca",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\"/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/Clean_LE_Data_w_Means_2.csv\" has:\n",
+      "\"Clean_LE_Data_w_Means_2.csv\" has:\n",
       "\n",
       " 2928 observations & 19 features.\n",
       "\n"
@@ -73,11 +73,12 @@
     }
    ],
    "source": [
-    "filename = '/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/Clean_LE_Data_w_Means_2.csv'\n",
+    "path = '/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/'\n",
+    "fileName = \"Clean_LE_Data_w_Means_2.csv\"\n",
     "\n",
-    "df = pd.read_csv(filename, header=0)\n",
+    "df = pd.read_csv(path+fileName, header=0)\n",
     "\n",
-    "print(f'\\n\"{filename}\" has:\\n\\n', df.shape[0], 'observations &', df.shape[1], 'features.\\n')"
+    "print(f'\\n\"{fileName}\" has:\\n\\n', df.shape[0], 'observations &', df.shape[1], 'features.\\n')"
    ]
   },
   {
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "78402a76",
    "metadata": {
     "scrolled": true
@@ -372,7 +373,7 @@
        "Education         12.100000    14.100000      20.70000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,12 +387,12 @@
    "id": "a8a6b762",
    "metadata": {},
    "source": [
-    "## Counts of object data"
+    "## Counts of np.object data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "832423d3",
    "metadata": {},
    "outputs": [
@@ -439,7 +440,7 @@
        "Country  2928    183  Afghanistan   16"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,12 +454,12 @@
    "id": "d11e2c8d",
    "metadata": {},
    "source": [
-    "## Visualizing life expectancy for 193 countries "
+    "## Visualizing life expectancy for 193 countries over 15 years"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "7acc996b",
    "metadata": {},
    "outputs": [
@@ -495,16 +496,15 @@
    "id": "14ecd699",
    "metadata": {},
    "source": [
-    "### NOTE 1: Inference\n",
+    "### NOTE 1:\n",
     "\n",
-    "1. **Skewness= -0.6386047359** \n",
+    "|                 | Mean | Median | Standard Deviation |    Skew | Kutosis |\n",
+    "|----------------:|-----:|-------:|-------------------:|--------:|--------:|\n",
+    "| Life Expectancy | 69.2 |\t 72.1 |               9.52 | -0.6386 | -0.2345 |\n",
     "\n",
+    "- Whenever the Kurtosis is less than zero or negative, it refers to distributions that are wider than the standard normal and have thinner tails than the standard normal curve. \n",
     "\n",
-    "2. **Kurtosis = -0.2344773942**\n",
-    "   - Whenever the Kurtosis is less than zero or negative, it refers to distributions that are wider than the standard normal. It also refers to distributions that have thinner tails than the standard normal curve. This simply means that more data values are located near the mean and less data values are located at the extremes.    \n",
-    " \n",
-    "  \n",
-    "3. The Life Expectancy between \"*developing nations*\" and \"*developed nations*\" has mean (**69.2 y**) and the median (**72.1 y**) are not appreciably different.  \n"
+    "- This simply means that more data values are located near the mean and less data values are located at the extremes."
    ]
   },
   {
@@ -552,67 +552,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "0f700bfa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45ccc19e46114f7da810b7c6fe86bc15",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff62a0ecd9d6403ca0b5467319debda7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e07eb2ed262419fac2c35541a93dded",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89be65236e254dc4b4cab82e3a8c74a4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pandas_profiling import ProfileReport\n",
     "\n",
@@ -631,7 +574,7 @@
    "source": [
     "### NOTE 3: Pandas Profiling Alerts\n",
     "\n",
-    "24 Alerts were obtained from `WHO Life Expecteancy: IDA_EDA_Report`, a list of all alerts can be found on the Report.html\n",
+    "24 Alerts were obtained from `WHO Life Expectancy: IDA_EDA_Report`, a list of all alerts can be found on the Report.html\n",
     "\n",
     "\n",
     "1. `Infant Death` and `Number of less than 5yr deaths` are highly correlated, **correlation = 0.997**.\n",
@@ -669,7 +612,7 @@
    "source": [
     "## Drop Highly Correlated Features\n",
     "\n",
-    "The *WHO Life Expecteancy: IDA_EDA_Report* found six variables were highly correlated.\n",
+    "The *WHO Life Expectancy: IDA_EDA_Report* found six variables were highly correlated.\n",
     "\n",
     "| Variables | Correlation |\n",
     "|:----------|------------:|\n",
@@ -677,13 +620,13 @@
     "| Thinness at 1-19yr & Thinness at 5-9yr | 0.939 |\n",
     "| Perc_Expen & GDP | 0.899 |\n",
     "\n",
-    "- Since GDP was dropped due to 22% missing values ANY comparsion IS NOT Necessary\n",
+    "- Since GDP was dropped due to 22% missing values ANY comparison IS NOT Necessary\n",
     "\n",
     "- In order to determine which ones to remove, we will compare the correlations after each removal.\n",
     "\n",
-    "- It is reccommened that removing descriptors with absolute correlations above 0.75 is done by a 'bake-off' method, for reference, see [Max Kuhn](https://topepo.github.io/caret/pre-processing.html#identifying-correlated-predictors)\n",
+    "- It is recommended that removing descriptors with absolute correlations above 0.75 is done by a 'bake-off' method, for reference, see [Max Kuhn](https://topepo.github.io/caret/pre-processing.html#identifying-correlated-predictors)\n",
     "\n",
-    "- BTW, my co-worker Peter Brown used the 'bake-off' idea alot when doing scientific comparisons, but I don't think anyone will ever care or read this far.\n",
+    "- BTW, an old co-worker, Peter Brown used the 'bake-off' idea a lot when describing scientific comparisons, but I don't think anyone will ever care or read this far.\n",
     "\n",
     "\n",
     "https://topepo.github.io/caret/pre-processing.html#identifying-correlated-predictors"
@@ -699,22 +642,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "dfc188ad",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        , -0.19655718],\n",
-       "       [-0.19655718,  1.        ]])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate Corr Coeff for InfD vs LifeExpectancy\n",
     "\n",
@@ -723,22 +654,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b80c01c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        , -0.22252912],\n",
-       "       [-0.22252912,  1.        ]])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate Corr Coeff for lt5yD vs LifeExpectancy\n",
     "\n",
@@ -769,44 +688,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c956ea2a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        , -0.47277841],\n",
-       "       [-0.47277841,  1.        ]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.corrcoef(df['Thin1_19y'], df['LifeExpectancy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "391b8750",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        , -0.46723051],\n",
-       "       [-0.46723051,  1.        ]])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.corrcoef(df['Thin5_9y'], df['LifeExpectancy'])"
    ]
@@ -826,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ae928e2a",
    "metadata": {},
    "outputs": [],
@@ -846,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "6ab9451a",
    "metadata": {},
    "outputs": [],
