--- a/Unification2/5_Life_Expectancy_Feature_Engineering.ipynb
+++ b/Unification2/5_Life_Expectancy_Feature_Engineering.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bb04b6d3",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "127f518f",
    "metadata": {},
    "outputs": [
@@ -72,9 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clean_LE_Data_FEng_4.csv      Life_Expectancy_Data.csv\ty_test.csv\r\n",
-      "Clean_LE_Data_Post_EDA_3.csv  x_test.csv\t\ty_train.csv\r\n",
-      "Clean_LE_Data_w_Means_2.csv   x_train.csv\r\n"
+      "ls: cannot access '*.csv': No such file or directory\r\n"
      ]
     }
    ],
@@ -84,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2026d29a",
    "metadata": {},
    "outputs": [
@@ -120,9 +118,10 @@
     }
    ],
    "source": [
+    "path = '/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/'\n",
     "filename = 'Clean_LE_Data_Post_EDA_3.csv'\n",
     "\n",
-    "df = pd.read_csv(filename, header=0)\n",
+    "df = pd.read_csv(path+filename, header=0)\n",
     "\n",
     "# Convert object 'Status' to categorical \n",
     "df[\"Status\"] = pd.Categorical(df[\"Status\"])\n",
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "fe010053",
    "metadata": {},
    "outputs": [
@@ -201,7 +200,7 @@
        "       'Zambia', 'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "505bf3d4",
    "metadata": {},
    "outputs": [],
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "378d56e9",
    "metadata": {},
    "outputs": [],
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "ad31034c",
    "metadata": {},
    "outputs": [],
@@ -271,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "81729892",
    "metadata": {},
    "outputs": [],
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "8f56d73b",
    "metadata": {},
    "outputs": [],
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "1b9bcb09",
    "metadata": {},
    "outputs": [],
@@ -305,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "8696b3ad",
    "metadata": {},
    "outputs": [],
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "6f7c31a6",
    "metadata": {},
    "outputs": [],
@@ -335,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "3c285567",
    "metadata": {},
    "outputs": [
@@ -405,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "5e54a97b",
    "metadata": {},
    "outputs": [],
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "8dc95b6f",
    "metadata": {},
    "outputs": [
@@ -435,7 +434,7 @@
        "array([2, 5, 7, 8, 3, 6, 1, 4])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "a89f5a3b",
    "metadata": {},
    "outputs": [
@@ -587,22 +586,23 @@
        "2        9.9       2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "path = /home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/'\n",
     "file_name = 'Clean_LE_Data_FEng_4.csv'\n",
     "\n",
-    "df.to_csv(file_name, index=False)\n",
+    "df.to_csv(path+file_name, index=False)\n",
     "\n",
     "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "6401f485",
    "metadata": {},
    "outputs": [
@@ -610,14 +610,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Clean_LE_Data_FEng_4.csv      Life_Expectancy_Data.csv\ty_test.csv\r\n",
-      "Clean_LE_Data_Post_EDA_3.csv  x_test.csv\t\ty_train.csv\r\n",
-      "Clean_LE_Data_w_Means_2.csv   x_train.csv\r\n"
+      "\n",
+      "File Saved:\n",
+      "\n",
+      "/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/Clean_LE_Data_FEng_4.csv\n"
      ]
     }
    ],
    "source": [
-    "!ls *.csv"
+    "print('\\nFile Saved:\\n\\n/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/Clean_LE_Data_FEng_4.csv')"
    ]
   },
   {
@@ -645,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
