--- a/Unification2/7_Life_Expectancy_Modeling.ipynb
+++ b/Unification2/7_Life_Expectancy_Modeling.ipynb
@@ -407,6 +407,38 @@
     "print(cv)\n",
     "print(cv.mean())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19d3f9df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b91f5db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "pipe4 = Pipeline([('preprocessing', preprocessing),\n",
+    "                  ('model', GradientBoostingClassifier(n_estimators=100, validation_fraction=0.2,\n",
+    "                                                       n_iter_no_change=5, tol=0.01, random_state=0))\n",
+    "                  ])\n",
+    "pipe4.fit(X_train_m, y_train_m)\n",
+    "accuracy4 = pipe4.score(X_test_m, y_test_m)*100\n",
+    "print(f'GB Model Accuracy: {accuracy4}%')\n",
+    "scores['Male'].append((\"M1GB\",score(X_test_m,y_test_m,pipe4)))\n",
+    "\n",
+    "pipe4.fit(X_train_f, y_train_f)\n",
+    "accuracy4 = pipe4.score(X_test_f, y_test_f)*100\n",
+    "print(f'GB Model Accuracy: {accuracy4}%')\n",
+    "scores['Female'].append((\"M1GB\",score(X_test_f,y_test_f,pipe4)))"
+   ]
   }
  ],
  "metadata": {
@@ -425,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
