--- a/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
+++ b/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
@@ -277,7 +277,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "10edd1f3",
    "metadata": {},
@@ -357,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
