--- a/Unification2/5_Life_Expectancy_Feature_Engineering.ipynb
+++ b/Unification2/5_Life_Expectancy_Feature_Engineering.ipynb
@@ -1,17 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d9069ab7",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Feature_Engineering\" data-toc-modified-id=\"Feature_Engineering-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Feature_Engineering</a></span></li><li><span><a href=\"#Load-and-verify-data-integrity\" data-toc-modified-id=\"Load-and-verify-data-integrity-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Load and verify data integrity</a></span></li><li><span><a href=\"#Categorize-Countries-into-Regions\" data-toc-modified-id=\"Categorize-Countries-into-Regions-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Categorize Countries into Regions</a></span><ul class=\"toc-item\"><li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>NOTE 1:</a></span></li></ul></li><li><span><a href=\"#Save-engineered-data-for-modeling\" data-toc-modified-id=\"Save-engineered-data-for-modeling-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Save engineered data for modeling</a></span></li></ul></div>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0d6eaa04",
    "metadata": {},
@@ -30,7 +20,7 @@
     "\n",
     "---\n",
     "\n",
-    "Categorize Countires into Regions\n",
+    "## Pre-processing: Categorize countries into 8 regions\n",
     "\n",
     "This file takes input of  `Clean_LE_Data_Post_EDA_3.csv` and produces output of `Clean_LE_Data_FEng_4.csv`\n",
     "\n",
@@ -49,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "bb04b6d3",
    "metadata": {},
    "outputs": [],
@@ -64,25 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "127f518f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ls: cannot access '*.csv': No such file or directory\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls *.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "2026d29a",
    "metadata": {},
    "outputs": [
@@ -118,7 +90,7 @@
     }
    ],
    "source": [
-    "path = '/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/'\n",
+    "path = '../data/processed/'\n",
     "filename = 'Clean_LE_Data_Post_EDA_3.csv'\n",
     "\n",
     "df = pd.read_csv(path+filename, header=0)\n",
@@ -139,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "fe010053",
    "metadata": {},
    "outputs": [
@@ -200,7 +172,7 @@
        "       'Zambia', 'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "505bf3d4",
    "metadata": {},
    "outputs": [],
@@ -235,25 +207,24 @@
     "Asia = ['Bangladesh','Bhutan','Brunei','Cambodia','China','India','Indonesia','Japan','Kazakhstan',\n",
     "        \"Democratic People's Republic of Korea\",'South Korea','Kyrgyzstan',\"Lao People's Democratic Republic\",'Malaysia','Maldives','Mongolia','Myanmar',\n",
     "        'Nepal','Philippines','Singapore','Sri Lanka','Taiwan','Tajikistan','Thailand','Turkmenistan',\n",
-    "        'Uzbekistan','Viet Nam']\n"
+    "        'Uzbekistan','Viet Nam']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "378d56e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "M_East_N_Africa = ['Afghanistan','Algeria','Azerbaijan','Bahrain','Egypt',\"Iran (Islamic Republic of)\",\n",
-    "                   'Iraq','Israel','Jordan','Kuwait','Lebanon','Libya','Morocco','Oman','Pakistan','Qatar',\n",
-    "                   'Saudi Arabia','Somalia','Syrian Arab Republic','Tunisia','Turkey',\n",
-    "                   'United Arab Emirates','Yemen']\n"
+    "                   'Iraq','Israel','Jordan','Kuwait','Lebanon','Libya','Morocco','Oman','Pakistan','Qatar','Saudi Arabia','Somalia','Syrian Arab Republic','Tunisia','Turkey',\n",
+    "                   'United Arab Emirates','Yemen']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "ad31034c",
    "metadata": {},
    "outputs": [],
@@ -262,25 +233,23 @@
     "          'Bulgaria','Croatia','Cyprus','Czech Republic','Denmark','Estonia','Finland','France',\n",
     "          'Georgia','Germany','Greece','Hungary','Iceland','Ireland','Italy','Kosovo','Latvia',\n",
     "          'Liechtenstein','Lithuania','Luxembourg','Yugoslav republic of Macedonia','Malta',\n",
-    "          'Republic of Moldova','Monaco','Montenegro',\n",
-    "          'Netherlands','Norway','Poland','Portugal','Romania','Russia','San Marino','Serbia',\n",
-    "          'Slovakia','Slovenia','Spain','Sweden','Switzerland','Ukraine',\n",
-    "          'United Kingdom of Great Britain and Northern Ireland','Vatican City']\n"
+    "          'Republic of Moldova','Monaco','Montenegro','Netherlands','Norway','Poland','Portugal','Romania','Russia','San Marino','Serbia','Slovakia','Slovenia','Spain','Sweden','Switzerland','Ukraine','United Kingdom of Great Britain and Northern Ireland',\n",
+    "          'Vatican City']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "81729892",
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_America = ['Canada','Greenland','Mexico','United States of America']\n"
+    "N_America = ['Canada','Greenland','Mexico','United States of America']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "8f56d73b",
    "metadata": {},
    "outputs": [],
@@ -288,23 +257,23 @@
     "C_America_Caribbean = ['Antigua and Barbuda','Bahamas','Barbados','Belize','Costa Rica','Cuba',\n",
     "                       'Dominica','Dominican Republic','El Salvador','Grenada','Guatemala',\n",
     "                       'Haiti','Honduras','Jamaica','Nicaragua','Panama','Saint Kitts and Nevis',\n",
-    "                       'Saint Lucia','Saint Vincent and the Grenadines','Trinidad and Tobago']\n"
+    "                       'Saint Lucia','Saint Vincent and the Grenadines','Trinidad and Tobago']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "1b9bcb09",
    "metadata": {},
    "outputs": [],
    "source": [
     "S_America = ['Argentina','Bolivia','Brazil','Chile','Colombia','Ecuador','Guyana',\n",
-    "             'Paraguay','Peru','Suriname','Uruguay',\"Venezuela (Bolivarian Republic of)\"]\n"
+    "             'Paraguay','Peru','Suriname','Uruguay',\"Venezuela (Bolivarian Republic of)\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "8696b3ad",
    "metadata": {},
    "outputs": [],
@@ -317,24 +286,24 @@
     "                      'Malawi','Mali','Mauritania','Mauritius','Mozambique','Namibia','Niger',\n",
     "                      'Nigeria','Rwanda','Sao Tome and Principe','Senegal','Seychelles','Sierra Leone',\n",
     "                      'South Africa','South Sudan','Sudan','Swaziland','Tanzania','Togo','Uganda',\n",
-    "                      'Zambia','Zimbabwe']\n"
+    "                      'Zambia','Zimbabwe']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "6f7c31a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "Oceania = ['Australia','Timor-Leste','Fiji','Kiribati','Marshall Islands',\n",
     "           'Micronesia (Federated States of)','Nauru','Niue','New Zealand','Palau',\n",
-    "           'Papua New Guinea','Samoa','Solomon Islands','Tonga','Tuvalu','Vanuatu']\n"
+    "           'Papua New Guinea','Samoa','Solomon Islands','Tonga','Tuvalu','Vanuatu']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "3c285567",
    "metadata": {},
    "outputs": [
@@ -404,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "5e54a97b",
    "metadata": {},
    "outputs": [],
@@ -424,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "8dc95b6f",
    "metadata": {},
    "outputs": [
@@ -434,7 +403,7 @@
        "array([2, 5, 7, 8, 3, 6, 1, 4])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,10 +425,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "a89f5a3b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "File Saved:\n",
+      "\n",
+      "../data/processed/Clean_LE_Data_FEng_4.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -586,48 +565,21 @@
        "2        9.9       2  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = /home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/'\n",
+    "path = '../data/processed/'\n",
     "file_name = 'Clean_LE_Data_FEng_4.csv'\n",
     "\n",
     "df.to_csv(path+file_name, index=False)\n",
     "\n",
+    "print('\\nFile Saved:\\n\\n../data/processed/Clean_LE_Data_FEng_4.csv')\n",
+    "\n",
     "df.head(3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "6401f485",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "File Saved:\n",
-      "\n",
-      "/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/Clean_LE_Data_FEng_4.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('\\nFile Saved:\\n\\n/home/mcc/Desktop/Life_Expectancy_Analysis_Modeling/data/processed/Clean_LE_Data_FEng_4.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd5304d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
