--- a/Unification2/7_Life_Expectancy_Modeling.ipynb
+++ b/Unification2/7_Life_Expectancy_Modeling.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e01d7371",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Modeling\" data-toc-modified-id=\"Modeling-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Modeling</a></span><ul class=\"toc-item\"><li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>NOTE 1:</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b3e8eadd",
    "metadata": {},
    "source": [
@@ -33,63 +22,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "2000ce6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Common Python Libraries\n",
+    "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "import warnings\n",
+    "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import seaborn as sns\n",
     "\n",
     "# import warnings\n",
-    "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Loading Regression and Modeling Libaries\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from sklearn.linear_model import SGDRegressor\n"
+    "# Loading Regression and Modeling Libaries\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "05207097",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clean_LE_Data_FEng_4.csv      Life_Expectancy_Data.csv\ty_test.csv\n",
-      "Clean_LE_Data_Post_EDA_3.csv  x_test.csv\t\ty_train.csv\n",
-      "Clean_LE_Data_w_Means_2.csv   x_train.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls *.csv"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "009376b1",
    "metadata": {},
    "source": [
     "### NOTE 1:\n",
-    "- **Model # 1 - Use: Income, Education, HIV, DTP, Polio, lt5yD, AdultMort**"
+    "- **USE FEATURES**: `'AdultMort','PercExpen','Measles','BMI','DTP''HIV','Income'`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "c059d20d",
    "metadata": {},
    "outputs": [
@@ -114,101 +84,109 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>AdultMort</th>\n",
+       "      <th>PercExpen</th>\n",
+       "      <th>Measles</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DTP</th>\n",
+       "      <th>HIV</th>\n",
        "      <th>Income</th>\n",
        "      <th>Education</th>\n",
-       "      <th>HIV</th>\n",
-       "      <th>DTP</th>\n",
-       "      <th>Polio</th>\n",
-       "      <th>lt5yD</th>\n",
-       "      <th>AdultMort</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>26.407266</td>\n",
+       "      <td>73</td>\n",
+       "      <td>51.4</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>0.782</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>83.0</td>\n",
+       "      <td>448.595299</td>\n",
+       "      <td>144</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>0.835</td>\n",
        "      <td>13.7</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>83.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>92.0</td>\n",
+       "      <td>7627.412444</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>0.897</td>\n",
        "      <td>16.6</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>92.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>379.765905</td>\n",
+       "      <td>1</td>\n",
+       "      <td>51.4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>0.673</td>\n",
        "      <td>13.6</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>693.0</td>\n",
+       "      <td>299.367125</td>\n",
+       "      <td>59</td>\n",
+       "      <td>31.6</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>31.9</td>\n",
        "      <td>0.567</td>\n",
        "      <td>11.8</td>\n",
-       "      <td>31.9</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>693.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Income  Education   HIV   DTP  Polio  lt5yD  AdultMort\n",
-       "0   0.782       15.0   0.1  98.0   98.0      6       28.0\n",
-       "1   0.835       13.7   0.1  96.0   95.0      0       83.0\n",
-       "2   0.897       16.6   0.1  93.0   93.0      0       92.0\n",
-       "3   0.673       13.6   0.1  97.0   97.0      4       15.0\n",
-       "4   0.567       11.8  31.9  96.0   96.0      4      693.0"
+       "   AdultMort    PercExpen  Measles   BMI   DTP   HIV  Income  Education\n",
+       "0       28.0    26.407266       73  51.4  98.0   0.1   0.782       15.0\n",
+       "1       83.0   448.595299      144  65.0  96.0   0.1   0.835       13.7\n",
+       "2       92.0  7627.412444        2  55.0  93.0   0.1   0.897       16.6\n",
+       "3       15.0   379.765905        1  51.4  97.0   0.1   0.673       13.6\n",
+       "4      693.0   299.367125       59  31.6  96.0  31.9   0.567       11.8"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load X-Train \n",
-    "df = pd.read_csv('x_train.csv', header=0)\n",
+    "# Load X-Train\n",
+    "path = '../data/processed/'\n",
+    "fileName = 'x_train.csv'\n",
+    "\n",
+    "df = pd.read_csv(path+fileName, header=0)\n",
     "\n",
     "# Obtain predictors from Notebook #5:\n",
-    "# 5_Life_Expectancy_Recursive_Feature_Elimination.ipynb\n",
-    "\n",
-    "predictors = ['Income', 'Education', 'HIV', 'DTP', 'Polio', 'lt5yD', 'AdultMort']\n",
+    "# 8_Life_Expectancy_Recursive_Feature_Elimination.ipynb\n",
+    "predictors = ['AdultMort', 'PercExpen', 'Measles',\n",
+    "              'BMI', 'DTP', 'HIV', 'Income', 'Education']\n",
     "\n",
     "x_train = df[predictors]\n",
-    "\n",
-    "x_train.head()"
+    "x_train.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "5fe9beda",
    "metadata": {},
    "outputs": [
@@ -270,7 +248,7 @@
        "4            46.4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,12 +257,12 @@
     "# Load Y-Train\n",
     "y_train = pd.read_csv(\"y_train.csv\", header=0)\n",
     "\n",
-    "y_train.head()"
+    "y_train.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "ed94eae8",
    "metadata": {},
    "outputs": [],
@@ -294,7 +272,7 @@
     "x_test = pd.read_csv(\"x_test.csv\", header=0)\n",
     "\n",
     "y_train = pd.read_csv(\"y_train.csv\", header=0)\n",
-    "y_test = pd.read_csv(\"y_test.csv\", header=0)"
+    "y_test = pd.read_csv(\"y_test.csv\", header=0)\n"
    ]
   },
   {
@@ -314,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "44be6847",
    "metadata": {},
    "outputs": [
@@ -323,7 +301,8 @@
      "output_type": "stream",
      "text": [
       "[0.77353212 0.81239152 0.82021745 0.83378051 0.8123496 ]\n",
-      "0.8104542396676632\n"
+      "\n",
+      "Mean = 0.8104542396676632\n"
      ]
     }
    ],
@@ -331,14 +310,14 @@
     "# Linear Regression\n",
     "\n",
     "lm = LinearRegression()\n",
-    "cv = cross_val_score(lm,x_train,y_train,cv=5)\n",
+    "cv = cross_val_score(lm, x_train, y_train, cv=5)\n",
     "print(cv)\n",
-    "print(cv.mean())"
+    "print('\\nMean =', cv.mean())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "eedcb505",
    "metadata": {},
    "outputs": [
@@ -346,8 +325,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.89437976 0.86730021 0.88333376 0.89929528 0.88145511]\n",
-      "0.8851528224621834\n"
+      "[0.89253163 0.86752145 0.88390546 0.90001411 0.88145511]\n",
+      "\n",
+      "Mean = 0.8850855524889119\n"
      ]
     }
    ],
@@ -355,14 +335,14 @@
     "# Decision Tree Regressor\n",
     "\n",
     "dt = DecisionTreeRegressor(max_depth=5)\n",
-    "cv = cross_val_score(dt,x_train,y_train,cv=5)\n",
+    "cv = cross_val_score(dt, x_train, y_train, cv=5)\n",
     "print(cv)\n",
-    "print(cv.mean())"
+    "print('\\nMean =', cv.mean())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "55c6aa39",
    "metadata": {},
    "outputs": [
@@ -371,7 +351,8 @@
      "output_type": "stream",
      "text": [
       "[0.24553878 0.16638795 0.22588448 0.12750496 0.18453894]\n",
-      "0.1899710214514779\n"
+      "\n",
+      "Mean = 0.1899710214514779\n"
      ]
     }
    ],
@@ -379,14 +360,14 @@
     "# Support Vector Regressor\n",
     "\n",
     "regr = SVR()\n",
-    "cv = cross_val_score(regr,x_train,y_train,cv=5)\n",
+    "cv = cross_val_score(regr, x_train, y_train, cv=5)\n",
     "print(cv)\n",
-    "print(cv.mean())"
+    "print('\\nMean =', cv.mean())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "9ec67b61",
    "metadata": {},
    "outputs": [
@@ -395,7 +376,8 @@
      "output_type": "stream",
      "text": [
       "[0.93777862 0.94625967 0.94826961 0.95304168 0.94819837]\n",
-      "0.9467095920842518\n"
+      "\n",
+      "Mean = 0.9467095920842518\n"
      ]
     }
    ],
@@ -403,9 +385,9 @@
     "# CatBoost Regressor\n",
     "\n",
     "model = GradientBoostingRegressor(random_state=100)\n",
-    "cv = cross_val_score(model,x_train,y_train,cv=5)\n",
+    "cv = cross_val_score(model, x_train, y_train, cv=5)\n",
     "print(cv)\n",
-    "print(cv.mean())"
+    "print('\\nMean =', cv.mean())\n"
    ]
   },
   {
@@ -418,10 +400,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2b91f5db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Pipeline' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mensemble\u001b[39;00m \u001b[39mimport\u001b[39;00m GradientBoostingClassifier\n\u001b[0;32m----> 3\u001b[0m pipe4 \u001b[39m=\u001b[39m Pipeline([(\u001b[39m'\u001b[39m\u001b[39mpreprocessing\u001b[39m\u001b[39m'\u001b[39m, preprocessing),\n\u001b[1;32m      4\u001b[0m                   (\u001b[39m'\u001b[39m\u001b[39mmodel\u001b[39m\u001b[39m'\u001b[39m, GradientBoostingClassifier(n_estimators\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m, validation_fraction\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m,\n\u001b[1;32m      5\u001b[0m                                                        n_iter_no_change\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, tol\u001b[39m=\u001b[39m\u001b[39m0.01\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m))\n\u001b[1;32m      6\u001b[0m                   ])\n\u001b[1;32m      7\u001b[0m pipe4\u001b[39m.\u001b[39mfit(X_train_m, y_train_m)\n\u001b[1;32m      8\u001b[0m accuracy4 \u001b[39m=\u001b[39m pipe4\u001b[39m.\u001b[39mscore(X_test_m, y_test_m)\u001b[39m*\u001b[39m\u001b[39m100\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Pipeline' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
@@ -432,12 +426,12 @@
     "pipe4.fit(X_train_m, y_train_m)\n",
     "accuracy4 = pipe4.score(X_test_m, y_test_m)*100\n",
     "print(f'GB Model Accuracy: {accuracy4}%')\n",
-    "scores['Male'].append((\"M1GB\",score(X_test_m,y_test_m,pipe4)))\n",
+    "scores['Male'].append((\"M1GB\", score(X_test_m, y_test_m, pipe4)))\n",
     "\n",
     "pipe4.fit(X_train_f, y_train_f)\n",
     "accuracy4 = pipe4.score(X_test_f, y_test_f)*100\n",
     "print(f'GB Model Accuracy: {accuracy4}%')\n",
-    "scores['Female'].append((\"M1GB\",score(X_test_f,y_test_f,pipe4)))"
+    "scores['Female'].append((\"M1GB\", score(X_test_f, y_test_f, pipe4)))\n"
    ]
   }
  ],
