--- a/Unification2/AOK2_Life_Expectancy_IDA.ipynb
+++ b/Unification2/AOK2_Life_Expectancy_IDA.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a752c232",
    "metadata": {
@@ -8,10 +9,40 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Initial_Data_Analysis\" data-toc-modified-id=\"Initial_Data_Analysis-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Initial_Data_Analysis</a></span></li><li><span><a href=\"#Load,-rename-columns,-information\" data-toc-modified-id=\"Load,-rename-columns,-information-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Load, rename columns, information</a></span></li><li><span><a href=\"#Check-number-of-null-values\" data-toc-modified-id=\"Check-number-of-null-values-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Check number of null values</a></span><ul class=\"toc-item\"><li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>NOTE 1:</a></span></li><li><span><a href=\"#NOTE-2:\" data-toc-modified-id=\"NOTE-2:-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>NOTE 2:</a></span></li><li><span><a href=\"#NOTE-3:\" data-toc-modified-id=\"NOTE-3:-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>NOTE 3:</a></span></li></ul></li><li><span><a href=\"#Imputation-using-column-means\" data-toc-modified-id=\"Imputation-using-column-means-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Imputation using column means</a></span></li><li><span><a href=\"#Re-Check-null-data-points\" data-toc-modified-id=\"Re-Check-null-data-points-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Re-Check null data points</a></span></li><li><span><a href=\"#Save-intermediate-dataframe\" data-toc-modified-id=\"Save-intermediate-dataframe-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Save intermediate dataframe</a></span></li></ul></div>"
+    "\n",
+    "<div class=\"toc\"><ul class=\"toc-item\">\n",
+    "    <li><span>\n",
+    "    <a href=\"#Initial_Data_Analysis\" data-toc-modified-id=\"Initial_Data_Analysis-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Initial_Data_Analysis</a>\n",
+    "    </span></li>\n",
+    "    <li><span>\n",
+    "    <a href=\"#Load,-rename-columns,-information\" data-toc-modified-id=\"Load,-rename-columns,-information-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Load, rename columns, information</a>\n",
+    "    </span></li>\n",
+    "    <li><span>\n",
+    "    <a href=\"#Check-number-of-null-values\" data-toc-modified-id=\"Check-number-of-null-values-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Check number of null values</a>\n",
+    "    </span>\n",
+    "        <ul class=\"toc-item\">\n",
+    "            <li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>NOTE 1:</a></span></li>\n",
+    "            <li><span><a href=\"#NOTE-2:\" data-toc-modified-id=\"NOTE-2:-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>NOTE 2:</a></span></li>\n",
+    "            <li><span><a href=\"#NOTE-3:\" data-toc-modified-id=\"NOTE-3:-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>NOTE 3:</a></span></li>\n",
+    "        </ul></li>\n",
+    "    <li><span>\n",
+    "    <a href=\"#Imputation-using-column-means\" data-toc-modified-id=\"Imputation-using-column-means-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Imputation using column means</a>\n",
+    "    </span>\n",
+    "    </li>\n",
+    "    <li><span>\n",
+    "    <a href=\"#Re-Check-null-data-points\" data-toc-modified-id=\"Re-Check-null-data-points-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Re-Check null data points</a>\n",
+    "    </span>\n",
+    "    </li>\n",
+    "    <li><span>\n",
+    "    <a href=\"#Save-intermediate-dataframe\" data-toc-modified-id=\"Save-intermediate-dataframe-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Save intermediate dataframe</a>\n",
+    "    </span>\n",
+    "    </li>\n",
+    "    </ul>\n",
+    "</div>"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f5ac5ac",
    "metadata": {},
@@ -30,15 +61,16 @@
     "\n",
     "---\n",
     "\n",
-    "Purpose: This notebook investigates missing values, renames features, and imputes missing values by column mean.\n",
+    "Purpose: This notebook investigates *missing values, renames features, and imputes missing values by column mean*.\n",
     "\n",
     "Input: `Life_Expectancy_Data.csv`\n",
+    "\n",
     "Output: `Clean_LE_Data_w_Means_1.csv`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "656d8c75",
    "metadata": {},
    "outputs": [],
@@ -61,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "06115e7f",
    "metadata": {},
    "outputs": [
@@ -125,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "4cab4dae",
    "metadata": {
     "scrolled": false
@@ -135,9 +167,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==============================\n",
-      "Column              No. values\n",
-      "==============================\n",
+      "======================================\n",
+      "Column              No. missing values\n",
+      "======================================\n",
       "Country             0\n",
       "Year                0\n",
       "Status              0\n",
@@ -165,13 +197,14 @@
     }
    ],
    "source": [
-    "print('='*30)\n",
-    "print('Column              No. values')\n",
-    "print('='*30)\n",
+    "print('='*38)\n",
+    "print('Column              No. missing values')\n",
+    "print('='*38)\n",
     "print(df.isnull().sum())"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64de46b9",
    "metadata": {},
@@ -179,12 +212,12 @@
     "### NOTE 1: \n",
     "- The **Dependent feature** 'LifeExpectancy' has 10 missing values. \n",
     " \n",
-    "- What exactly is missing from LifeExpectancy column."
+    "- Q. What exactly is missing from LifeExpectancy column?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "b3f09aee",
    "metadata": {},
    "outputs": [
@@ -518,7 +551,7 @@
        "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "25161f70",
    "metadata": {},
    "outputs": [
@@ -620,7 +653,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,37 +664,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de834104",
    "metadata": {},
    "source": [
-    "### Note 2\n",
+    "### Note 2:\n",
     "\n",
     "- Further investigation (not shown here) finds that all ten missing values are from countries with only one row (year=2013). \n",
     "\n",
-    "- Because 'LifeExpectancy' is a Dependent variable, I will delete those 10 observations with NO labels rather than impute them.\n",
+    "- 'LifeExpectancy' is a Dependent variable. I will delete(drop) those 10 observations with NO labels rather than impute them.\n",
     "\n",
-    "- Drop 10 rows containing null in `LifeExpectancy` column.\n",
-    "\n",
-    "\n",
-    " ====================\n",
-    "- The 'LifeExpectancy' feature appear to be **Missing Completely at Random(MCAR)**. The main advantage of **MCAR** is that the analysis is unbiased. Data lost with design fault do not impact other parameters in the model. "
+    "- 'LifeExpectancy' appears to be **Missing Completely at Random(MCAR)**. The advantage of **MCAR** is that the analysis is unbiased."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "bf72eff3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 10 country rows deleted\n",
     "df.dropna(subset=['LifeExpectancy'], inplace=True)"
@@ -669,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "d0e4a1bd",
    "metadata": {},
    "outputs": [
@@ -709,7 +731,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "4710c8ef",
    "metadata": {},
    "outputs": [],
@@ -759,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "cbd80604",
    "metadata": {},
    "outputs": [],
@@ -791,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "0190a1e6",
    "metadata": {},
    "outputs": [
@@ -799,6 +821,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "==================== \n",
       "\n",
       "\n",
@@ -834,6 +857,7 @@
     }
    ],
    "source": [
+    "print()\n",
     "print('='*20,'\\n')\n",
     "\n",
     "print('\\nShape of Cleaned and Imputed dataframe:', df.shape)\n",
@@ -843,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "d0ee2683",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1051,7 @@
        "4      18.2   0.454        9.5  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "c0f4a104",
    "metadata": {},
    "outputs": [
