--- a/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
+++ b/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
@@ -180,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 11 2023, 16:05:54) \n[GCC 11.2.0]"
+   "version": "3.9.16"
   },
   "varInspector": {
    "cols": {
