nothing more than title changes

--- a/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling.ipynb
+++ b/notebooks/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling.ipynb
@@ -1,22 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d137dd18",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Executive-Summary\" data-toc-modified-id=\"Executive-Summary-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Executive Summary</a></span></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Introduction</a></span><ul class=\"toc-item\"><li><span><a href=\"#Project-Planning\" data-toc-modified-id=\"Project-Planning-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Project Planning</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f29391f8",
    "metadata": {},
    "source": [
-    "# 1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
     "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
