--- a/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
+++ b/notebooks/4_Life_Expectancy_Exploratory_Data_Analysis_PART2.ipynb
@@ -1,24 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "de12a5bd",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Exploratory_Data_Analysis_PART_2\" data-toc-modified-id=\"Exploratory_Data_Analysis_PART_2-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Exploratory_Data_Analysis_PART_2</a></span><ul class=\"toc-item\"><li><span><a href=\"#Re-check-correlations-of-numeric-vars\" data-toc-modified-id=\"Re-check-correlations-of-numeric-vars-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Re-check correlations of numeric vars</a></span></li><li><span><a href=\"#NOTE-#3:\" data-toc-modified-id=\"NOTE-#3:-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>NOTE #3:</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64ef5418",
    "metadata": {},
    "source": [
-    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
-    "## Exploratory_Data_Analysis_PART_2\n",
+    "## EDA PART 2\n",
     "\n",
     "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
