--- a/notebooks/6_Life_Expectancy_Recursive_Feature_Elimination.ipynb
+++ b/notebooks/6_Life_Expectancy_Recursive_Feature_Elimination.ipynb
@@ -1,24 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c6e03256",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Recursive_Feature_Elimination\" data-toc-modified-id=\"Recursive_Feature_Elimination-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Recursive_Feature_Elimination</a></span></li><li><span><a href=\"#Recursive-Feature-Elimination\" data-toc-modified-id=\"Recursive-Feature-Elimination-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Recursive Feature Elimination</a></span><ul class=\"toc-item\"><li><span><a href=\"#train_test_split-Section\" data-toc-modified-id=\"train_test_split-Section-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>train_test_split Section</a></span></li><li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>NOTE 1:</a></span></li><li><span><a href=\"#RFE-fitting\" data-toc-modified-id=\"RFE-fitting-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>RFE fitting</a></span></li><li><span><a href=\"#NOTE-2:-Inference\" data-toc-modified-id=\"NOTE-2:-Inference-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>NOTE 2: Inference</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e8f969db",
    "metadata": {},
    "source": [
-    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
-    "## Recursive_Feature_Elimination\n",
+    "## Recursive Feature Elimination\n",
     "\n",
     "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
@@ -29,7 +19,6 @@
     "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #6\n",
     "\n",
     "---\n",
-    "\n",
     "\n",
     "- **Use** `Clean_LE_Data_FEng_4.csv`\n",
     "\n",
