--- a/notebooks/7_Life_Expectancy_Modeling.ipynb
+++ b/notebooks/7_Life_Expectancy_Modeling.ipynb
@@ -1,22 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e01d7371",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Modeling\" data-toc-modified-id=\"Modeling-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Modeling</a></span><ul class=\"toc-item\"><li><span><a href=\"#NOTE-1:\" data-toc-modified-id=\"NOTE-1:-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>NOTE 1:</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b3e8eadd",
    "metadata": {},
    "source": [
-    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
     "## Modeling\n",
     "\n",
