--- a/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
+++ b/notebooks/8-Life_Expectancy_Linear_Coefficients.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
     "## Linear Model Coefficient Investigation\n",
     "\n",
