--- a/notebooks/Excellent_5_Life_Expectancy_Feature_Engineering.ipynb
+++ b/notebooks/Excellent_5_Life_Expectancy_Feature_Engineering.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0d6eaa04",
    "metadata": {},
    "source": [
-    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
-    "## Feature_Engineering\n",
+    "## Feature Engineering\n",
     "\n",
     "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
