--- a/notebooks/9-Life_Expectancy_Groupings.ipynb
+++ b/notebooks/9-Life_Expectancy_Groupings.ipynb
@@ -1,20 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Groupings\" data-toc-modified-id=\"Groupings-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Groupings</a></span></li><li><span><a href=\"#Grouping-#1-by-Region\" data-toc-modified-id=\"Grouping-#1-by-Region-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Grouping #1 by Region</a></span></li></ul></div>"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Life_Expectancy_WHO_UN_Analysis_Modeling\n",
+    "# Life Expectancy Analysis & Modeling Using WHO, UN data\n",
     "\n",
     "## Groupings\n",
     "\n",
