Cleaned IDA files

--- a/2_IDA/IDA w REORDER cols.ipynb
+++ b/2_IDA/IDA w REORDER cols.ipynb
@@ -1,31 +1,39 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "b181e697",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ad97a7ff",
+   "id": "90d7c48b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Common Python Libraries\n",
-    "from __future__ import print_function, division\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import numpy as np\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "https://www.kaggle.com/discussions/general/60603\n",
+    "\n",
+    "                \n",
+    "| **List Of Features** | **Description** |\n",
+    "|:---------------------|:----------------|\n",
+    "| **Year** |  Year  |\n",
+    "| **Cntry** |   Country |\n",
+    "| **Dev** |  Developed or Not |\n",
+    "| **GDP** |  Gross Domestic Product per capita (in USD) |\n",
+    "| **T_Expen** |    Total Expenditure |\n",
+    "| **Per_Expen** |   Percent Expenditure |\n",
+    "| **Income** |   Income composition of resources, Human Development Index |\n",
+    "| **Pop** |   Population of country |\n",
+    "| **Ed** |  Years of Education |\n",
+    "| **EtOH** |  Alcohol consumption, litres of pure alcohol per capita  |\n",
+    "| **HepB** |   Hepatitis B: % immunization coverage among 1-year-olds |\n",
+    "| **Measles** |   Number of reported cases per 1,000 population |\n",
+    "| **Diph** |    Diphtheria, tetanus toxoid & pertussis % immunization coverage among 1-year-olds |\n",
+    "| **Polio** |   Pol3: % immunization coverage among 1-year-olds |\n",
+    "| **HIV** |   HIV/AIDS: Deaths per 1,000 (0-4 years) |\n",
+    "| **BMI** |   Average Body Mass Index of entire population |\n",
+    "| **A_Mort** |  Adult Mortality Rates of both sexes (probability of dying between 15 and 60 years per 1000 population) \n",
+    "| **Inf_D** |   Number of Infant Deaths per 1,000 population |\n",
+    "| **lt5y_D** |  Number of under-five deaths per 1,000 population |\n",
+    "| **Th_1-19y** |  % Prevalence of thinness among children and adolescents 10 < Age < 19 |\n",
+    "| **Th_5-9y** |  % Prevalence of thinness among children and adolescents 5 < Age < 9 |\n",
+    "| **L_Expec** |   Life Expectancy (Yr) |"
    ]
   },
   {
@@ -90,14 +98,6 @@
     "\n",
     "df.GDPpC.describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f68d6a4b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -197,22 +197,6 @@
     "| Income  | 167 | Yes |\n",
     "| Ed  | 163 | Yes |"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94fc41ab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca99640c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
