--- a/1_main/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling.ipynb
+++ b/1_main/1_MAIN_Life_Expectancy_WHO_UN_Analysis_Modeling.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f29391f8",
    "metadata": {},
@@ -9,7 +10,7 @@
     "\n",
     "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
-    "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
+    "From: Matt Curcio, matt.curcio.us@gmail.com\n",
     "\n",
     "Date: 2023-01-29\n",
     "\n",
@@ -24,11 +25,13 @@
    "source": [
     "## Executive Summary\n",
     "\n",
-    "This report investigates modifiable environmental factors that may contribute to life expectancy in the hopes of finding a mathematical model. Two questions are answered here: \n",
+    "This report investigates modifiable environmental factors that contribute to life expectancy. \n",
     "\n",
-    "1. *Which variables are significant in modeling and predicting Life Expectancy?*\n",
+    "Two questions are answered here: \n",
     "\n",
-    "2. *What model best describes the relationship between Life Expectancy and its significant variables?*\n",
+    "1. *Which variables are significant in predicting Life Expectancy?*\n",
+    "\n",
+    "2. *What model best describes the relationship between Life Expectancy and its variables?*\n",
     "\n",
     "**Results**\n",
     "\n",
@@ -36,35 +39,33 @@
     "\n",
     "1. Income\n",
     "2. Education\n",
-    "3. HIV Rates\n",
+    "3. HIV rates\n",
     "4. Diphtheria, Tetanus, & Pertussis vaccination rates\n",
     "5. Polio vaccination rates\n",
-    "6. Adult Mortality rates\n",
+    "6. Adult mortality rates\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Introduction**\n",
+    "\n",
+    "In 2006, The World Health Organization published a report entitled *Preventing disease through healthy environments*. \n",
+    "\n",
+    ">[It] confirms that approximately one-quarter of the global disease burden, and more than one-third of the burden among children, is due to modifiable environmental factors.\n",
+    ">\n",
+    ">[WHO-Preventing Disease Through Healthy Environments](https://www.who.int/publications/i/item/9241593822)\n",
     "\n",
     "\n",
-    "**Impetus**\n",
+    "Information from the World Health Organization and United Nations was gathered for the years 2000-2015 for 183 countries in three categories: \n",
     "\n",
-    "Information on [Life Expectancy-Kaggle](https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who) from the World Health Organization and United Nations was gathered for the years 2000-2015 for 193 countries in three categories: \n",
+    "1. *Communicable diseases*: Hepatitis B, Measles, Polio, Diphtheria, HIV/AIDS.  \n",
     "\n",
-    "1. *Communicable diseases*: Hepatitis B, Measles, Polio, Diphtheria, HIV/AIDS.\n",
+    "2. *Country-specific monetary data*: Gross domestic product, Governmental expenditure rates, Average personal income, Developmental status, Population, Education.  \n",
     "\n",
+    "3. *Health-related information*: Infant and adult mortality rates, Number of deaths less than 5 yr, Alcohol consumption rates, Child-related malnutrition, Average body mass index per capita.  \n",
     "\n",
-    "2. *Country-specific monetary data*: Gross domestic product, Governmental expenditure rates, Average personal income, Developmental status, Population, Education.\n",
+    "The data can be found at: \n",
+    "[Life Expectancy-Kaggle](https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who) \n",
     "\n",
-    "\n",
-    "3. *Health-related information*: Infant and adult mortality rates, Number of deaths less than 5 yr, Alcohol consumption rates, Child-related malnutrition, Average body mass index per capita.\n",
-    "\n",
-    "\n",
-    "**Important Features**\n",
-    "\n",
-    "21 Features were culled to six (6) features that were deemed most important then used in the final modeling of life expactancy:\n",
-    "\n",
-    "1. Income\n",
-    "2. Education\n",
-    "3. HIV\n",
-    "4. DTP\n",
-    "5. Polio\n",
-    "6. AdultMort\n",
     "\n",
     "**Results**\n",
     "\n",
@@ -78,22 +79,6 @@
     "| Support Vector Regressor  | 19.0 |\n",
     "\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "743a0c01",
-   "metadata": {},
-   "source": [
-    "## Introduction\n",
-    "\n",
-    "In 2006, The World Health Organization published a report entitled *Preventing disease through healthy environments*. \n",
-    ">[It] “confirms that approximately one-quarter of the global disease burden, and more than one-third of the burden among children, is due to modifiable environmental factors.”\n",
-    ">\n",
-    ">[WHO-Preventing Disease Through Healthy Environments](https://www.who.int/publications/i/item/9241593822)\n",
-    "\n",
-    "The dataset was obtained from Kaggle.com:\n",
-    "https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who"
    ]
   },
   {
@@ -113,176 +98,6 @@
     "- [Discussion of Linear Model](8-Life_Expectancy_Linear_Coefficients.ipynb)\n",
     "- [Results](8-Life_Expectancy_Groupings.ipynb)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "efd07ec9",
-   "metadata": {},
-   "source": [
-    "### Variable examination"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c2b6b22",
-   "metadata": {},
-   "source": [
-    "\n",
-    "| **Response Variable** |      **Description** |\n",
-    "|:----------------------|:---------------------|\n",
-    "|    **LifeExpectancy** | Life Expectancy (Yr) |\n",
-    "\n",
-    "**<p style=\"color:green;\">Green indicates feature used in final model</p>**\n",
-    "**<p style=\"color:blue;\">Blue indicates feature of questionable importance</p>**\n",
-    "**<p style=\"color:orange;\">Orange indicates dropped due to high collinearity</p>**\n",
-    "**<p style=\"color:red;\">Red indicates dropped due to missing values greater than 15%</p>**\n",
-    "\n",
-    "| **List Of Features** | **Description** |\n",
-    "|:---------------------|:----------------|\n",
-    "| **<p style=\"color:green;\">Income</p>** | Income composition of resources, Human Development Index |\n",
-    "| **<p style=\"color:green;\">Education</p>** | Years of Education |\n",
-    "| **<p style=\"color:green;\">HIV</p>** | HIV/AIDS: Deaths per 1,000 |\n",
-    "| **<p style=\"color:green;\">DTP</p>** | Diphtheria, tetanus toxoid & pertussis % immunization coverage among 1-year-olds |\n",
-    "| **<p style=\"color:green;\">Polio</p>** | Pol3: % immunization coverage among 1-year-olds |\n",
-    "| **<p style=\"color:green;\">AdultMort</p>** | Adult Mortality Rates of both sexes (probability of dying between 15 and 60 years per 1000 population) |\n",
-    "| **<p style=\"color:blue;\">Year</p>** |  Year   |\n",
-    "| **<p style=\"color:blue;\">Country</p>** |   Country |\n",
-    "| **<p style=\"color:blue;\">Status</p>** |  Developed(1) or Developing(0) |\n",
-    "| **<p style=\"color:blue;\">BMI</p>** |   Average Body Mass Index of entire population |\n",
-    "| **<p style=\"color:blue;\">lt5yD</p>** |  Number of under-five deaths per 1,000 population |\n",
-    "| **<p style=\"color:blue;\">Thin1_19y</p>** |  % Prevalence of thinness among children and adolescents 10 < Age < 19 |\n",
-    "| **<p style=\"color:blue;\">TotalExpen</p>** |    Total Expenditure |\n",
-    "| **<p style=\"color:blue;\">PercExpen</p>** |   Percent Expenditure |\n",
-    "| **<p style=\"color:blue;\">EtOH</p>** |  Alcohol consumption, litres of pure alcohol per capita  |\n",
-    "| **<p style=\"color:blue;\">Measles</p>** |   Number of reported cases per 1,000 population |\n",
-    "| **<p style=\"color:orange;\">Thin5_9y</p>** |  % Prevalence of thinness among children and adolescents 5 < Age < 9 |\n",
-    "| **<p style=\"color:orange;\">InfD</p>** |   Number of Infant Deaths per 1,000 population |\n",
-    "| **<p style=\"color:red;\">HepB</p>** | Hepatitis B: % immunization coverage among 1-year-olds |\n",
-    "| **<p style=\"color:red;\">Population</p>** | Population of country |\n",
-    "| **<p style=\"color:red;\">GDP</p>** | Gross Domestic Product per capita (in USD) |\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "019383fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "72386f52",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2938 entries, 0 to 2937\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   Country         2938 non-null   object \n",
-      " 1   Year            2938 non-null   int64  \n",
-      " 2   Status          2938 non-null   object \n",
-      " 3   LifeExpectancy  2928 non-null   float64\n",
-      " 4   AdultMort       2928 non-null   float64\n",
-      " 5   InfD            2938 non-null   int64  \n",
-      " 6   EtOH            2744 non-null   float64\n",
-      " 7   PercExpen       2938 non-null   float64\n",
-      " 8   HepB            2385 non-null   float64\n",
-      " 9   Measles         2938 non-null   int64  \n",
-      " 10  BMI             2904 non-null   float64\n",
-      " 11  lt5yD           2938 non-null   int64  \n",
-      " 12  Polio           2919 non-null   float64\n",
-      " 13  TotalExpen      2712 non-null   float64\n",
-      " 14  DTP             2919 non-null   float64\n",
-      " 15  HIV             2938 non-null   float64\n",
-      " 16  GDP             2490 non-null   float64\n",
-      " 17  Population      2286 non-null   float64\n",
-      " 18  Thin1_19y       2904 non-null   float64\n",
-      " 19  Thin5_9y        2904 non-null   float64\n",
-      " 20  Income          2771 non-null   float64\n",
-      " 21  Education       2775 non-null   float64\n",
-      "dtypes: float64(16), int64(4), object(2)\n",
-      "memory usage: 505.1+ KB\n",
-      "==================== \n",
-      "\n",
-      "Country             0\n",
-      "Year                0\n",
-      "Status              0\n",
-      "LifeExpectancy     10\n",
-      "AdultMort          10\n",
-      "InfD                0\n",
-      "EtOH              194\n",
-      "PercExpen           0\n",
-      "HepB              553\n",
-      "Measles             0\n",
-      "BMI                34\n",
-      "lt5yD               0\n",
-      "Polio              19\n",
-      "TotalExpen        226\n",
-      "DTP                19\n",
-      "HIV                 0\n",
-      "GDP               448\n",
-      "Population        652\n",
-      "Thin1_19y          34\n",
-      "Thin5_9y           34\n",
-      "Income            167\n",
-      "Education         163\n",
-      "dtype: int64\n",
-      "==================== \n",
-      "\n",
-      "\n",
-      "None\n",
-      "\n",
-      "Dataframe shape: (2928, 22)\n",
-      "==================== \n",
-      "\n",
-      "\n",
-      "\n",
-      "Shape of Cleaned and Imputed dataframe: (2928, 19)\n",
-      "Country           0\n",
-      "Year              0\n",
-      "Status            0\n",
-      "LifeExpectancy    0\n",
-      "AdultMort         0\n",
-      "InfD              0\n",
-      "EtOH              0\n",
-      "PercExpen         0\n",
-      "Measles           0\n",
-      "BMI               0\n",
-      "lt5yD             0\n",
-      "Polio             0\n",
-      "TotalExpen        0\n",
-      "DTP               0\n",
-      "HIV               0\n",
-      "Thin1_19y         0\n",
-      "Thin5_9y          0\n",
-      "Income            0\n",
-      "Education         0\n",
-      "dtype: int64\n",
-      "==================== \n",
-      "\n",
-      "Clean_LE_Data_w_Means_2.csv: SAVED\n"
-     ]
-    }
-   ],
-   "source": [
-    "%run 2_LE_IDA.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "982d488e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -375,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -389,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -440,7 +255,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ee253db64471d3bc5400655757329a6a33de9a5ca06cae94740881a9d5095460"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
