Finished and moved 2_IDA to notebooks

--- a/notebooks/2_Initial_Data_Analysis.ipynb
+++ b/notebooks/2_Initial_Data_Analysis.ipynb
@@ -12,19 +12,23 @@
     "\n",
     "To:&nbsp;&nbsp;&nbsp;&nbsp; [Magnimind](https://magnimindacademy.com/)\n",
     "\n",
-    "From: Matt Curcio, matt.curcio.ri@gmail.com\n",
+    "From: Matt Curcio, matt.curcio.us@gmail.com\n",
     "\n",
     "Date: 2023-01-29\n",
     "\n",
-    "Re:&nbsp;&nbsp;&nbsp; NOTEBOOK #2\n",
+    "Re:&nbsp;&nbsp;&nbsp; Initial Data Analysis\n",
     "\n",
     "---\n",
+    "\n",
+    "## Executive Summary\n",
     "\n",
     "Purpose: This notebook investigates *missing values, renames features, and imputes missing values by column mean*.\n",
     "\n",
     "Input: `Life_Expectancy_Data.csv`\n",
     "\n",
-    "Output: `Clean_LE_Data_w_Means_1.csv`"
+    "Output: `Clean_LE_Data_w_Means_1.csv`\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -43,11 +47,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e99d56e5",
    "metadata": {},
    "source": [
-    "## Load, rename columns, information"
+    "## Load data\n",
+    "\n",
+    "- Rename columns for clarity"
    ]
   },
   {
@@ -57,13 +64,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Original File \"Life_Expectancy_Data.csv\" has  2938 observations & 22 features.\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(2938, 22)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -77,16 +85,16 @@
     "                'Education']\n",
     "\n",
     "df = pd.read_csv(path+filename, names=column_names, header=0)\n",
-    "\n",
-    "print(f'\\nOriginal File \"{filename}\" has ', df.shape[0], 'observations &', df.shape[1], 'features.\\n')"
+    "df.shape"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bc0d9af6",
    "metadata": {},
    "source": [
-    "## Check number of null values"
+    "## Check for null values"
    ]
   },
   {
@@ -97,6 +105,15 @@
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================\n",
+      "Column              No. missing values\n",
+      "======================================\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -131,6 +148,10 @@
     }
    ],
    "source": [
+    "print('='*38)\n",
+    "print('Column              No. missing values')\n",
+    "print('='*38)\n",
+    "\n",
     "df.isnull().sum()"
    ]
   },
@@ -170,7 +191,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Dataframe df shape: (2928, 22)\n"
+      "Dataframe shape: (2928, 22)\n"
      ]
     },
     {
@@ -249,40 +270,7 @@
    "execution_count": 7,
    "id": "4710c8ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2928 entries, 0 to 2937\n",
-      "Data columns (total 19 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   Country         2928 non-null   object \n",
-      " 1   Year            2928 non-null   int64  \n",
-      " 2   Status          2928 non-null   object \n",
-      " 3   LifeExpectancy  2928 non-null   float64\n",
-      " 4   AdultMort       2928 non-null   float64\n",
-      " 5   InfD            2928 non-null   int64  \n",
-      " 6   EtOH            2735 non-null   float64\n",
-      " 7   PercExpen       2928 non-null   float64\n",
-      " 8   Measles         2928 non-null   int64  \n",
-      " 9   BMI             2896 non-null   float64\n",
-      " 10  lt5yD           2928 non-null   int64  \n",
-      " 11  Polio           2909 non-null   float64\n",
-      " 12  TotalExpen      2702 non-null   float64\n",
-      " 13  DTP             2909 non-null   float64\n",
-      " 14  HIV             2928 non-null   float64\n",
-      " 15  Thin1_19y       2896 non-null   float64\n",
-      " 16  Thin5_9y        2896 non-null   float64\n",
-      " 17  Income          2768 non-null   float64\n",
-      " 18  Education       2768 non-null   float64\n",
-      "dtypes: float64(13), int64(4), object(2)\n",
-      "memory usage: 457.5+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.drop(['Population', 'HepB', 'GDP'], axis=1, inplace=True)"
    ]
@@ -392,7 +380,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"Clean_LE_Data_w_Means_2.csv\", index=False)"
+    "path = '../data/processed/'\n",
+    "fileName = 'Clean_LE_Data_w_Means_2.csv'\n",
+    "\n",
+    "df.to_csv(path+fileName, index=False)"
    ]
   }
  ],
