Finished plotly LE by 183 countries

--- a/3_EDA/NEED_LE_country_8regions.ipynb
+++ b/3_EDA/NEED_LE_country_8regions.ipynb
@@ -62,9 +62,7 @@
    "source": [
     "filename = 'regional_data_2-2023-01-18 13:18:55.451573.csv'\n",
     "\n",
-    "df = pd.read_csv(filename)\n",
-    "\n",
-    "df.info()"
+    "df = pd.read_csv(filename)"
    ]
   },
   {
