Change UN icon size

--- a/5_Feature_ENG/Feature_Engineering_catgorize_nations_2_regions.ipynb
+++ b/5_Feature_ENG/Feature_Engineering_catgorize_nations_2_regions.ipynb
@@ -192,15 +192,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "505bf3d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Asia = ['Bangladesh','Bhutan','Brunei','Cambodia','China','India','Indonesia','Japan','Kazakhstan',\n",
-    "        \"Democratic People's Republic of Korea\",'South Korea','Kyrgyzstan',\"Lao People's Democratic Republic\",'Malaysia','Maldives','Mongolia','Myanmar',\n",
-    "        'Nepal','Philippines','Singapore','Sri Lanka','Taiwan','Tajikistan','Thailand','Turkmenistan',\n",
-    "        'Uzbekistan','Viet Nam']"
+    "Asia = ['Bangladesh','Bhutan','Brunei','Cambodia','China','India','Indonesia','Japan','Kazakhstan',\"Democratic People's Republic of Korea\",'South Korea','Kyrgyzstan',\"Lao People's Democratic Republic\",'Malaysia','Maldives','Mongolia','Myanmar','Nepal','Philippines','Singapore','Sri Lanka','Taiwan','Tajikistan','Thailand','Turkmenistan','Uzbekistan','Viet Nam']"
    ]
   },
   {
@@ -210,10 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M_East_N_Africa = ['Afghanistan','Algeria','Azerbaijan','Bahrain','Egypt',\"Iran (Islamic Republic of)\",\n",
-    "                   'Iraq','Israel','Jordan','Kuwait','Lebanon','Libya','Morocco','Oman','Pakistan','Qatar',\n",
-    "                   'Saudi Arabia','Somalia','Syrian Arab Republic','Tunisia','Turkey',\n",
-    "                   'United Arab Emirates','Yemen']"
+    "M_East_N_Africa = ['Afghanistan','Algeria','Azerbaijan','Bahrain','Egypt',\"Iran (Islamic Republic of)\",'Iraq','Israel','Jordan','Kuwait','Lebanon','Libya','Morocco','Oman','Pakistan','Qatar','Saudi Arabia','Somalia','Syrian Arab Republic','Tunisia','Turkey','United Arab Emirates','Yemen']"
    ]
   },
   {
@@ -223,14 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Europe = ['Albania','Andorra','Armenia','Austria','Belarus','Belgium','Bosnia and Herzegovina',\n",
-    "          'Bulgaria','Croatia','Cyprus','Czech Republic','Denmark','Estonia','Finland','France',\n",
-    "          'Georgia','Germany','Greece','Hungary','Iceland','Ireland','Italy','Kosovo','Latvia',\n",
-    "          'Liechtenstein','Lithuania','Luxembourg','Yugoslav republic of Macedonia','Malta',\n",
-    "          'Republic of Moldova','Monaco','Montenegro',\n",
-    "          'Netherlands','Norway','Poland','Portugal','Romania','Russia','San Marino','Serbia',\n",
-    "          'Slovakia','Slovenia','Spain','Sweden','Switzerland','Ukraine',\n",
-    "          'United Kingdom of Great Britain and Northern Ireland','Vatican City']"
+    "Europe = ['Albania','Andorra','Armenia','Austria','Belarus','Belgium','Bosnia and Herzegovina','Bulgaria','Croatia','Cyprus','Czech Republic','Denmark','Estonia','Finland','France','Georgia','Germany','Greece','Hungary','Iceland','Ireland','Italy','Kosovo','Latvia','Liechtenstein','Lithuania','Luxembourg','Yugoslav republic of Macedonia','Malta','Republic of Moldova','Monaco','Montenegro','Netherlands','Norway','Poland','Portugal','Romania','Russia','San Marino','Serbia','Slovakia','Slovenia','Spain','Sweden','Switzerland','Ukraine','United Kingdom of Great Britain and Northern Ireland','Vatican City']"
    ]
   },
   {
@@ -250,10 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C_America_Caribbean = ['Antigua and Barbuda','Bahamas','Barbados','Belize','Costa Rica','Cuba',\n",
-    "                       'Dominica','Dominican Republic','El Salvador','Grenada','Guatemala',\n",
-    "                       'Haiti','Honduras','Jamaica','Nicaragua','Panama','Saint Kitts and Nevis',\n",
-    "                       'Saint Lucia','Saint Vincent and the Grenadines','Trinidad and Tobago']"
+    "C_America_Caribbean = ['Antigua and Barbuda','Bahamas','Barbados','Belize','Costa Rica','Cuba','Dominica','Dominican Republic','El Salvador','Grenada','Guatemala','Haiti','Honduras','Jamaica','Nicaragua','Panama','Saint Kitts and Nevis','Saint Lucia','Saint Vincent and the Grenadines','Trinidad and Tobago']"
    ]
   },
   {
@@ -263,8 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "S_America = ['Argentina','Bolivia','Brazil','Chile','Colombia','Ecuador','Guyana',\n",
-    "             'Paraguay','Peru','Suriname','Uruguay',\"Venezuela (Bolivarian Republic of)\"]"
+    "S_America = ['Argentina','Bolivia','Brazil','Chile','Colombia','Ecuador','Guyana','Paraguay','Peru','Suriname','Uruguay',\"Venezuela (Bolivarian Republic of)\"]"
    ]
   },
   {
@@ -274,15 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Sub_Saharan_Africa = ['Angola','Benin','Botswana','Burkina Faso','Burundi','Cameroon','Cape Verde',\n",
-    "                      'The Central African Republic','Chad','Comoros','Republic of the Congo',\n",
-    "                      'Democratic Republic of the Congo','Côte d\\'Ivoire','Djibouti',\n",
-    "                      'Equatorial Guinea','Eritrea','Ethiopia','Gabon','Gambia','Ghana',\n",
-    "                      'Guinea','Guinea-Bissau','Kenya','Lesotho','Liberia','Madagascar',\n",
-    "                      'Malawi','Mali','Mauritania','Mauritius','Mozambique','Namibia','Niger',\n",
-    "                      'Nigeria','Rwanda','Sao Tome and Principe','Senegal','Seychelles','Sierra Leone',\n",
-    "                      'South Africa','South Sudan','Sudan','Swaziland','Tanzania','Togo','Uganda',\n",
-    "                      'Zambia','Zimbabwe']"
+    "Sub_Saharan_Africa = ['Angola','Benin','Botswana','Burkina Faso','Burundi','Cameroon','Cape Verde','The Central African Republic','Chad','Comoros','Republic of the Congo','Democratic Republic of the Congo','Côte d\\'Ivoire','Djibouti','Equatorial Guinea','Eritrea','Ethiopia','Gabon','Gambia','Ghana','Guinea','Guinea-Bissau','Kenya','Lesotho','Liberia','Madagascar','Malawi','Mali','Mauritania','Mauritius','Mozambique','Namibia','Niger','Nigeria','Rwanda','Sao Tome and Principe','Senegal','Seychelles','Sierra Leone','South Africa','South Sudan','Sudan','Swaziland','Tanzania','Togo','Uganda','Zambia','Zimbabwe']"
    ]
   },
   {
@@ -292,9 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Oceania = ['Australia','Timor-Leste','Fiji','Kiribati','Marshall Islands',\n",
-    "           'Micronesia (Federated States of)','Nauru','Niue','New Zealand','Palau',\n",
-    "           'Papua New Guinea','Samoa','Solomon Islands','Tonga','Tuvalu','Vanuatu']"
+    "Oceania = ['Australia','Timor-Leste','Fiji','Kiribati','Marshall Islands','Micronesia (Federated States of)','Nauru','Niue','New Zealand','Palau','Papua New Guinea','Samoa','Solomon Islands','Tonga','Tuvalu','Vanuatu']"
    ]
   },
   {
@@ -538,6 +511,7 @@
     }
    ],
    "source": [
+    "path = ''\n",
     "file_name = 'Clean_LE_Data_Regions.csv'\n",
     "\n",
     "df.to_csv(file_name, index=False)\n",
